# tauceti

./: Cargo.toml  Dockerfile  test-resume  test-resume.docx
services/search/: Cargo.toml
services/search/src/: engine.rs  lib.rs
services/search/src/cache/: cache.rs  in_mem_cache.rs  mod.rs
services/search/src/eventing/: mod.rs
services/search/src/parsing/: fake_source.rs  query_ast.rs  reader_utils.rs  text_file_reader.rs
services/search/src/parsing/query_parsing/: mod.rs  query_tokenizer.rs  query_tokens.rs
services/search/src/storage/: file_system_interface.rs  http_storage_interface.rs  mod.rs  storage_utils.rs
services/search/src/tasks/: build_task.rs  search_helper.rs  search_task.rs
services/search/src/trees/: index_tree.rs  trie.rs
services/search/src/utils/: error_structs.rs  events.rs  reader_enums.rs  storage_enums.rs
services/upload/: Cargo.toml
services/upload/src/: main.rs
src/: engine.rs  main.rs  routes.rs
src/cache/: cache.rs  mod.rs  redis_wrapper.rs  tikv_cache.rs
src/eventing/: event_handler.rs  event_listener.rs  rabbitmq_wrapper.rs
src/parsing/: fake_source.rs  mod.rs  parser.rs  pdf_reader.rs  reader.rs  reader_utils.rs  text_file_reader.rs  tokenizer.rs  word_reader.rs
src/storage/: dummy_storage_interface.rs  mod.rs  storage_interface.rs
src/tasks/: build_task.rs  mod.rs  search_helper.rs  search_task.rs  task.rs
src/trees/: index_tree.rs  mod.rs  trie.rs
src/utils/: connection_context.rs  error_structs.rs  events.rs  mod.rs  reader_enums.rs
tests/: searching.rs  tree_building.rs
(+3 files in other folders)
