[package]
name = "tauceti"
version = "0.1.0"
authors = ["abhibhag"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version="1.6.2",features=["attributes"]}
async-macros = "2.0.0"
async-amqp="0.1.4"
env_logger="0.7.1"
log="0.4.11"
lapin="1.2.1"
futures="0.3.5"
serde = "1.0.115"
serde_json = "1.0.57"
async-trait="0.1.36"
http = "0.2.1"
redis = "0.17.0"
tempfile = "3.1.0"
relative-path="1.3.2"
dotext="0.1.1"
lopdf = "0.25.0"
tide = "0.13.0"

