[package]
name = "search"
version = "0.1.0"
authors = ["abhibhag"]
edition = "2018"

[dependencies]
async-std = {version="1.7.0",features=["attributes"]}
async-macros = "2.0.0"
async-amqp="0.1.4"
env_logger="0.7.1"
log="0.4.11"
lapin="1.2.1"
futures="0.3.5"
serde = "1.0.115"
serde_json = "1.0.57"
async-trait="0.1.36"
http = "0.2.1"
tempfile = "3.1.0"
relative-path="1.3.2"
dotext="0.1.1"
lopdf = "0.25.0"
tide = "0.14.0"
tikv-client = { git = "https://github.com/tikv/client-rust.git"}
tide-rustls = "0.1.3"

[patch.crates-io]
raft-proto = { git = "https://github.com/tikv/raft-rs", rev = "e624c1d48460940a40d8aa69b5329460d9af87dd"}

